--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -1,9 +1,31 @@
 header {
     display: flex;
 
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 
     color: white;
+}
+
+.logoH {
+    margin-left: -240px;
+}
+
+.name {
+    color: white;
+    background-image: url(/home/matheuskrc/TRYBE/Projetos-FrontEnd/sd-021-a-project-trybewallet/src/Images/background.jpeg);
+
+    padding: 10px;
+
+    border-radius: 40px;
+}
+
+.value {
+    color: white;
+    background-image: url(/home/matheuskrc/TRYBE/Projetos-FrontEnd/sd-021-a-project-trybewallet/src/Images/background.jpeg);
+
+    padding: 10px;
+
+    border-radius: 40px;
 }
 
